<resources>
    <string name="app_name">干货集中营</string>
    <string name="app_desc">发现更大的世界</string>

    <!-- Navigation -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_header_title">干货集中营</string>
    <string name="navigation_header_subtitle">每日分享妹子图和技术干货，还有供大家中午休息的休闲视频</string>

    <!-- DrawerLayout -->
    <string name="gank_io">Gank.IO</string>
    <string name="gank_name">干货集中营</string>
    <string name="gank_type_daily">每日推荐</string>
    <string name="gank_type_all">全部</string>
    <string name="gank_type_welfare">福利</string>
    <string name="gank_type_android">Android</string>
    <string name="gank_type_ios">iOS</string>
    <string name="gank_type_js">前端</string>
    <string name="gank_type_video">休息视频</string>
    <string name="gank_type_resources">拓展资源</string>
    <string name="gank_type_app">App</string>
    <string name="gank_type_recommend">瞎推荐</string>
    <string name="gank_function_share">分享</string>
    <string name="gank_function_about">关于</string>

    <!-- 主界面菜单名称 -->
    <string name="menu_read">Gank闲读</string>
    <string name="menu_history">Gank每日力推</string>
    <string name="menu_gankio">Gank.IO 主页</string>
    <string name="menu_github">Github热门仓库</string>

    <!-- Web菜单名称 -->
    <string name="menu_reload_url">重新加载</string>
    <string name="menu_copy_url">复制链接</string>
    <string name="menu_share_url">分享链接</string>
    <string name="menu_landscape_screen">横屏显示</string>
    <string name="menu_portrait_screen">竖屏显示</string>
    <string name="menu_open_browser">用浏览器打开</string>

    <!-- 其他菜单名称 -->
    <string name="menu_download">下载</string>
    <string name="menu_share">分享</string>
    <string name="menu_filter">筛选</string>

    <!-- 页面标题 -->
    <string name="page_title_reading">闲读</string>
    <string name="page_title_hsitory">每日力推</string>
    <string name="page_title_about">关于</string>

    <!-- 关于页面 -->
    <string name="about_introduce_title">介绍与帮助</string>
    <string name="about_introduce_content1">\u3000\u3000干货集中营是一款使用RxJava + Retrofit + Okhttp + Glide + MVP构建开发的一个Android客户端。每日分享妹子图和技术干货，还有供大家中午休息的休闲视频。</string>
    <string name="about_introduce_content2">\u3000\u3000数据和API来源于 daimajia 的 https://gank.io ，lyl873825813 完成 Android 端的设计和开发，完全开源，最佳的源代码，最佳的学习软件。</string>
    <string name="about_developer_title">开发人员</string>
    <string name="about_licenses_title">开源协议</string>

    <!-- 图片预览页面 -->
    <string name="picture_loading">图片正在加载中，请稍后&#8230;</string>
    <string name="picture_save_ask">将图片保存至手机？</string>
    <string name="picture_save_to">图片已保存至 %s</string>
    <string name="download_failed">图片下载失败</string>
    <string name="permission_title">权限请求</string>
    <string name="permission_message">权限被拒绝，请在设置里面开启相应权限，若无相应权限会影响使用</string>
    <string name="permission_denied">权限被拒绝，无法继续操作</string>

    <!-- 多状态布局 -->
    <string name="status_empty">客官，暂无数据哟~</string>
    <string name="status_network_poor">网络环境不佳，请稍后重试~</string>
    <string name="status_network_error">当前网络不可用，请检查网络连接~</string>

    <!-- 对话框按钮文本 -->
    <string name="open">打开</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>

    <!-- 复制提示信息 -->
    <string name="copy_success">已复制到剪切板</string>

    <!-- 分享文本信息 -->
    <string name="share_message">发现了一款非常美观的App「干货集中营&amp;gank.io」，每日分享妹子图和技术干货，还有供大家中午休息的休闲视频，完全开源，最佳的源代码，最佳的学习软件，太赞了! 推荐~：http://t.cn/Rg0hN4f</string>

    <!-- 闲读筛选提示信息 -->
    <string name="idle_reading_category_empty">没有加载到分类数据</string>

    <!-- 退出APP提示信息 -->
    <string name="exit_app_hint">再按一次退出程序</string>

</resources>
